@@ -23,8 +23,14 @@ import bisq.chat.ChatService;
 import bisq.chat.bisq_easy.open_trades.BisqEasyOpenTradeChannel;
 import bisq.chat.bisq_easy.open_trades.BisqEasyOpenTradeChannelService;
 import bisq.chat.bisq_easy.open_trades.BisqEasyOpenTradeSelectionService;
+import bisq.chat.mu_sig.open_trades.MuSigOpenTradeChannel;
+import bisq.chat.mu_sig.open_trades.MuSigOpenTradeChannelService;
+import bisq.chat.mu_sig.open_trades.MuSigOpenTradeSelectionService;
+import bisq.chat.priv.PrivateGroupChatChannel;
 import bisq.common.observable.Pin;
+import bisq.contract.Contract;
 import bisq.contract.bisq_easy.BisqEasyContract;
+import bisq.contract.mu_sig.MuSigContract;
 import bisq.desktop.ServiceProvider;
 import bisq.desktop.common.observable.FxBindings;
 import bisq.desktop.common.threading.UIThread;
@@ -48,6 +54,7 @@ import org.fxmisc.easybind.Subscription;
 import java.util.Optional;
 
 import static bisq.chat.ChatChannelDomain.BISQ_EASY_OPEN_TRADES;
+import static bisq.chat.ChatChannelDomain.MU_SIG_OPEN_TRADES;
 import static com.google.common.base.Preconditions.checkArgument;
 
 @Slf4j
@@ -60,14 +67,17 @@ public class MediatorController implements Controller {
     protected final ChatService chatService;
     protected final UserIdentityService userIdentityService;
     protected final UserProfileService userProfileService;
-    protected final ChatMessageContainerController chatMessageContainerController;
+    protected final ChatMessageContainerController bisqEasyOpenTradeChatMessageContainerController;
+    protected final ChatMessageContainerController muSigOpenTradeChatMessageContainerController;
 
-    private final BisqEasyOpenTradeSelectionService selectionService;
+    private final BisqEasyOpenTradeSelectionService bisqEasyOpenTradeSelectionService;
+    private final MuSigOpenTradeSelectionService muSigOpenTradeSelectionService;
     private final MediationCaseHeader mediationCaseHeader;
     private final MediatorService mediatorService;
     private final BisqEasyOpenTradeChannelService bisqEasyOpenTradeChannelService;
+    private final MuSigOpenTradeChannelService muSigOpenTradeChannelService;
     private final InvalidationListener itemListener;
-    private Pin mediationCaseListItemPin, selectedChannelPin;
+    private Pin mediationCaseListItemPin, bisqEasyOpenTradeSelectedChannelPin, muSigOpenTradeSelectedChannelPin;
     private Subscription searchPredicatePin, closedCasesPredicatePin;
 
     public MediatorController(ServiceProvider serviceProvider) {
@@ -75,17 +85,25 @@ public class MediatorController implements Controller {
         chatService = serviceProvider.getChatService();
         userIdentityService = serviceProvider.getUserService().getUserIdentityService();
         userProfileService = serviceProvider.getUserService().getUserProfileService();
-        BisqEasyOpenTradeChannelService channelService = chatService.getBisqEasyOpenTradeChannelService();
-        selectionService = chatService.getBisqEasyOpenTradesSelectionService();
+        bisqEasyOpenTradeSelectionService = chatService.getBisqEasyOpenTradesSelectionService();
+        muSigOpenTradeSelectionService = chatService.getMuSigOpenTradesSelectionService();
         mediatorService = serviceProvider.getSupportService().getMediatorService();
         bisqEasyOpenTradeChannelService = chatService.getBisqEasyOpenTradeChannelService();
+        muSigOpenTradeChannelService = chatService.getMuSigOpenTradeChannelService();
 
-        chatMessageContainerController = new ChatMessageContainerController(serviceProvider, BISQ_EASY_OPEN_TRADES, e -> {
+        bisqEasyOpenTradeChatMessageContainerController = new ChatMessageContainerController(serviceProvider, BISQ_EASY_OPEN_TRADES, e -> {
+        });
+        muSigOpenTradeChatMessageContainerController = new ChatMessageContainerController(serviceProvider, MU_SIG_OPEN_TRADES, e -> {
         });
         mediationCaseHeader = new MediationCaseHeader(serviceProvider, this::closeCaseHandler, this::reOpenCaseHandler);
 
         model = new MediatorModel();
-        view = new MediatorView(model, this, mediationCaseHeader.getRoot(), chatMessageContainerController.getView().getRoot());
+        view = new MediatorView(
+                model,
+                this,
+                mediationCaseHeader.getRoot(),
+                bisqEasyOpenTradeChatMessageContainerController.getView().getRoot(),
+                muSigOpenTradeChatMessageContainerController.getView().getRoot());
 
         itemListener = observable -> {
             // We need to set predicate when a new item gets added.
@@ -94,7 +112,12 @@ public class MediatorController implements Controller {
                 model.getListItems().setPredicate(item -> model.getSearchPredicate().get().test(item) && model.getClosedCasesPredicate().get().test(item));
                 updateEmpytState();
                 if (model.getListItems().getFilteredList().size() == 1) {
-                    selectionService.selectChannel(model.getListItems().getFilteredList().get(0).getChannel());
+                    var channel = model.getListItems().getFilteredList().getFirst().getChannel();
+                    if (channel instanceof BisqEasyOpenTradeChannel) {
+                        bisqEasyOpenTradeSelectionService.selectChannel(channel);
+                    } else if (channel instanceof MuSigOpenTradeChannel) {
+                        muSigOpenTradeSelectionService.selectChannel(channel);
+                    }
                 }
             });
         };
@@ -107,8 +130,8 @@ public class MediatorController implements Controller {
         mediationCaseListItemPin = FxBindings.<MediationCase, MediationCaseListItem>bind(model.getListItems())
                 .filter(mediationCase -> {
                     MediationRequest mediationRequest = mediationCase.getMediationRequest();
-                    BisqEasyContract contract = mediationRequest.getContract();
-                    Optional<UserProfile> mediatorFromContract = contract.getMediator();
+                    Contract<?> contract = mediationRequest.getContract();
+                    Optional<UserProfile> mediatorFromContract = getMediator(contract);
                     if (mediatorFromContract.isEmpty()) {
                         return false;
                     }
@@ -117,31 +140,49 @@ public class MediatorController implements Controller {
                         return false;
                     }
 
-                    BisqEasyOpenTradeChannel channel = findOrCreateChannel(mediationRequest, myOptionalUserIdentity.get());
-                    if (channel.getMediator().isEmpty()) {
-                        // In case we found an existing channel at mediatorFindOrCreatesChannel the mediator field could be empty
-                        return false;
-                    }
-                    try {
-                        checkArgument(channel.getTraders().size() == 2);
-                        checkArgument(channel.getBisqEasyOffer().equals(contract.getOffer()));
-                        checkArgument(channel.getMediator().orElseThrow().equals(contract.getMediator().orElseThrow()));
-                    } catch (IllegalArgumentException e) {
-                        log.error("Validation of channel properties and contract properties failed. " +
-                                "channel={}; contract={}", channel, contract, e);
-                        return false;
+                    PrivateGroupChatChannel<?> channel = findOrCreateChannel(mediationRequest, myOptionalUserIdentity.get());
+
+                    if (channel instanceof BisqEasyOpenTradeChannel bisqEasyOpenTradeChannel) {
+                        if (bisqEasyOpenTradeChannel.getMediator().isEmpty()) {
+                            // In case we found an existing channel at mediatorFindOrCreatesChannel the mediator field could be empty
+                            return false;
+                        }
+                        try {
+                            checkArgument(bisqEasyOpenTradeChannel.getTraders().size() == 2);
+                            checkArgument(bisqEasyOpenTradeChannel.getBisqEasyOffer().equals(contract.getOffer()));
+                            checkArgument(bisqEasyOpenTradeChannel.getMediator().orElseThrow().equals(mediatorFromContract.orElseThrow()));
+                        } catch (IllegalArgumentException e) {
+                            log.error("Validation of channel properties and contract properties failed. " +
+                                    "channel={}; contract={}", channel, contract, e);
+                            return false;
+                        }
+                    } else if (channel instanceof MuSigOpenTradeChannel muSigOpenTradeChannel) {
+                        if (muSigOpenTradeChannel.getMediator().isEmpty()) {
+                            // In case we found an existing channel at mediatorFindOrCreatesChannel the mediator field could be empty
+                            return false;
+                        }
+                        try {
+                            checkArgument(muSigOpenTradeChannel.getTraders().size() == 2);
+//                            checkArgument(muSigOpenTradeChannel.getMuSigOffer().equals(contract.getOffer()));
+                            checkArgument(muSigOpenTradeChannel.getMediator().orElseThrow().equals(mediatorFromContract.orElseThrow()));
+                        } catch (IllegalArgumentException e) {
+                            log.error("Validation of channel properties and contract properties failed. " +
+                                    "channel={}; contract={}", channel, contract, e);
+                            return false;
+                        }
                     }
                     return true;
                 })
                 .map(mediationCase -> {
                     MediationRequest mediationRequest = mediationCase.getMediationRequest();
-                    UserIdentity myUserIdentity = mediatorService.findMyMediatorUserIdentity(mediationRequest.getContract().getMediator()).orElseThrow();
-                    BisqEasyOpenTradeChannel channel = findOrCreateChannel(mediationRequest, myUserIdentity);
+                    UserIdentity myUserIdentity = mediatorService.findMyMediatorUserIdentity(getMediator(mediationRequest.getContract())).orElseThrow();
+                    PrivateGroupChatChannel<?> channel = findOrCreateChannel(mediationRequest, myUserIdentity);
                     return new MediationCaseListItem(serviceProvider, mediationCase, channel);
                 })
                 .to(mediatorService.getMediationCases());
 
-        selectedChannelPin = selectionService.getSelectedChannel().addObserver(this::selectedChannelChanged);
+        bisqEasyOpenTradeSelectedChannelPin = bisqEasyOpenTradeSelectionService.getSelectedChannel().addObserver(this::selectedChannelChanged);
+        muSigOpenTradeSelectedChannelPin = muSigOpenTradeSelectionService.getSelectedChannel().addObserver(this::selectedChannelChanged);
 
         searchPredicatePin = EasyBind.subscribe(model.getSearchPredicate(), searchPredicate -> updatePredicate());
         closedCasesPredicatePin = EasyBind.subscribe(model.getClosedCasesPredicate(), closedCasesPredicate -> updatePredicate());
@@ -160,17 +201,29 @@ public class MediatorController implements Controller {
         model.reset();
 
         mediationCaseListItemPin.unbind();
-        selectedChannelPin.unbind();
+        bisqEasyOpenTradeSelectedChannelPin.unbind();
+        muSigOpenTradeSelectedChannelPin.unbind();
         searchPredicatePin.unsubscribe();
         closedCasesPredicatePin.unsubscribe();
     }
 
     void onSelectItem(MediationCaseListItem item) {
         if (item == null) {
-            selectionService.selectChannel(null);
-        } else if (!item.getChannel().equals(selectionService.getSelectedChannel().get())) {
-            selectionService.selectChannel(item.getChannel());
+            bisqEasyOpenTradeSelectionService.selectChannel(null);
+            muSigOpenTradeSelectionService.selectChannel(null);
+        } else if (item.getChannel() instanceof BisqEasyOpenTradeChannel && !item.getChannel().equals(bisqEasyOpenTradeSelectionService.getSelectedChannel().get())) {
+            muSigOpenTradeSelectionService.selectChannel(null);
+            bisqEasyOpenTradeSelectionService.selectChannel(item.getChannel());
+        } else if (item.getChannel() instanceof MuSigOpenTradeChannel && !item.getChannel().equals(muSigOpenTradeSelectionService.getSelectedChannel().get())) {
+            bisqEasyOpenTradeSelectionService.selectChannel(null);
+            muSigOpenTradeSelectionService.selectChannel(item.getChannel());
         }
+
+//        if (item == null) {
+//            selectionService.selectChannel(null);
+//        } else if (!item.getChannel().equals(selectionService.getSelectedChannel().get())) {
+//            selectionService.selectChannel(item.getChannel());
+//        }
     }
 
     void onToggleClosedCases() {
@@ -212,9 +265,23 @@ public class MediatorController implements Controller {
                 model.getSelectedItem().set(null);
                 mediationCaseHeader.setMediationCaseListItem(null);
                 mediationCaseHeader.setShowClosedCases(model.getShowClosedCases().get());
-                maybeSelectFirst();
+                if (model.getSelectedItem().get() != null) {
+                    maybeSelectFirst();
+                }
+//                maybeSelectFirst();
                 updateEmpytState();
             } else if (chatChannel instanceof BisqEasyOpenTradeChannel tradeChannel) {
+                log.info("Selected channel changed to Bisq Easy Open Trade Channel");
+                model.getListItems().stream()
+                        .filter(item -> item.getChannel().getId().equals(tradeChannel.getId()))
+                        .findAny()
+                        .ifPresent(item -> {
+                            model.getSelectedItem().set(item);
+                            mediationCaseHeader.setMediationCaseListItem(item);
+                            mediationCaseHeader.setShowClosedCases(model.getShowClosedCases().get());
+                        });
+            } else if (chatChannel instanceof MuSigOpenTradeChannel tradeChannel) {
+                log.info("Selected channel changed to MuSig Open Trade Channel");
                 model.getListItems().stream()
                         .filter(item -> item.getChannel().getId().equals(tradeChannel.getId()))
                         .findAny()
@@ -255,7 +322,8 @@ public class MediatorController implements Controller {
         boolean isEmpty = sortedList.isEmpty();
         model.getNoOpenCases().set(isEmpty);
         if (isEmpty) {
-            selectionService.getSelectedChannel().set(null);
+            bisqEasyOpenTradeSelectionService.getSelectedChannel().set(null);
+            muSigOpenTradeSelectionService.getSelectedChannel().set(null);
             mediationCaseHeader.setMediationCaseListItem(null);
         } else {
             mediationCaseHeader.setMediationCaseListItem(model.getSelectedItem().get());
@@ -264,20 +332,46 @@ public class MediatorController implements Controller {
 
     private void maybeSelectFirst() {
         UIThread.runOnNextRenderFrame(() -> {
+
             if (!model.getListItems().getFilteredList().isEmpty()) {
-                selectionService.selectChannel(model.getListItems().getSortedList().get(0).getChannel());
+                var channel = model.getListItems().getSortedList().getFirst().getChannel();
+                if (channel instanceof BisqEasyOpenTradeChannel) {
+                    bisqEasyOpenTradeSelectionService.selectChannel(channel);
+                } else if (channel instanceof MuSigOpenTradeChannel) {
+                    muSigOpenTradeSelectionService.selectChannel(channel);
+                }
             }
         });
     }
 
-    private BisqEasyOpenTradeChannel findOrCreateChannel(MediationRequest mediationRequest,
-                                                         UserIdentity myUserIdentity) {
-        BisqEasyContract contract = mediationRequest.getContract();
-        return bisqEasyOpenTradeChannelService.mediatorFindOrCreatesChannel(
-                mediationRequest.getTradeId(),
-                contract.getOffer(),
-                myUserIdentity,
-                mediationRequest.getRequester(),
-                mediationRequest.getPeer());
+    private PrivateGroupChatChannel<?> findOrCreateChannel(MediationRequest mediationRequest,
+                                                           UserIdentity myUserIdentity) {
+        Contract<?> contract = mediationRequest.getContract();
+        if (contract instanceof BisqEasyContract bisqEasyContract) {
+            return bisqEasyOpenTradeChannelService.mediatorFindOrCreatesChannel(
+                    mediationRequest.getTradeId(),
+                    bisqEasyContract.getOffer(),
+                    myUserIdentity,
+                    mediationRequest.getRequester(),
+                    mediationRequest.getPeer());
+        } else if (contract instanceof MuSigContract muSigContract) {
+            return muSigOpenTradeChannelService.mediatorFindOrCreatesChannel(
+                    mediationRequest.getTradeId(),
+                    myUserIdentity,
+                    mediationRequest.getRequester(),
+                    mediationRequest.getPeer());
+        } else {
+            throw new IllegalArgumentException("Unsupported contract type: " + contract.getClass());
+        }
+    }
+
+    private Optional<UserProfile> getMediator(Contract<?> contract) {
+        if (contract instanceof BisqEasyContract bisqEasyContract) {
+            return bisqEasyContract.getMediator();
+        } else if (contract instanceof MuSigContract muSigContract) {
+            return muSigContract.getMediator();
+        } else {
+            return Optional.empty();
+        }
     }
 }
